# django-audit-log

./: .cursorrules  .pre-commit-config.yaml  DATABASE_EXCLUSION_FEATURES.md  README.md  pyproject.toml
src/django_audit_log/: admin.py  apps.py  middleware.py  mixins.py  models.py  test_django_audit_log.py  tests.py  urls.py  user_agent_utils.py  utils.py  views.py
src/django_audit_log/management/: __init__.py
src/django_audit_log/management/commands/: __init__.py  load_test_data.py  migrate_user_agents.py  reimport_user_agents.py
src/django_audit_log/migrations/: 0001_initial.py  0002_accesslog_user_agent.py  0003_alter_accesslog_data_alter_accesslog_ip_and_more.py  0004_alter_accesslog_user_agent_loguseragent_and_more.py  0005_accesslog_in_always_log_urls_and_more.py  0006_loguseragent_operating_system_version.py  0007_merge_duplicate_paths.py  0008_alter_loguseragent_browser_and_more.py
src/django_audit_log/templates/admin/django_audit_log/accesslog/: change_list.html
testproject/testproject/: settings.py
