[project]
name = "django-audit-log"
version = "0.0.5"  # Should be same as tag
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Josh Brooks", email = "josh.vdbroek@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "django>=4",
]

[project.scripts]
django-audit-log = "django_audit_log:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
